# scroll-shelter

./: .gitignore  .tool-versions  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  docker-compose.yml  example.env  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
app/: config.py
app/adapter/file_provider/: factories.py  implems.py
app/adapter/folder_db/: factories.py  implems.py
app/common/: type.py
app/endpoints/: folder.py  user.py
app/entrypoints/: http_server.py
app/infrastructure/: database.py  fastapi_user.py  google_oauth_client.py  web_app.py
app/interface/: file_provider.py  folder_db.py  user_db.py
app/usecase/: dto.py  file.py  folder.py
docker/: Dockerfile  README.md
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/api/scroll-shelter/: auth.js
frontend/src/components/: GDriveSelector.vue
frontend/src/components/auth/: LoginDialog.vue  SocialLogin.vue
frontend/src/layouts/: Main.vue
frontend/src/pages/: 404.vue  Login.vue  SignUp.vue
frontend/src/router/: index.js
frontend/src/services/: AuthService.js
frontend/src/store/: index.js
frontend/src/store/actions/: auth.js
frontend/src/store/modules/: auth.js
frontend/src/views/: GoogleCallback.vue  Home.vue  Login.vue
scroll_shelter/: __init__.py
scroll_shelter/adapter/file_provider/: factories.py  implems.py
scroll_shelter/common/: exceptions.py
scroll_shelter/endpoints/: user.py
scroll_shelter/entrypoints/: http_server.py
scroll_shelter/infrastructure/: database.py  fastapi_user.py  web_app.py
scroll_shelter/interface/: file_provider.py  user_db.py
scroll_shelter/usecase/: dto.py  file.py
tests/unit_tests/usecase/: conftest.py  test_file.py
